--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,13 @@
   <header>
     <a href="/" class="home">HOME</a>
     <a href="http://instagram.com/sumukhshetshirodker_" class="insta" title="My Instagram">
-      <img src="/static/img/image/insta" width="25" height="25">
+      <img src="/static/images/image/insta" width="25" height="25">
     </a>
     <a href="https://www.youtube.com/channel/UCYDslel3lQX0mLoqA9TqWDg" class="yt">
-      <img src="/static/img/image/yt" title="My YouTube" width="25" height="25">
+      <img src="/static/images/image/yt" title="My YouTube" width="25" height="25">
+    </a>
+    <a href="https://github.com/SumukhShirodker" class="fb">
+      <img src="/static/images/image/github" width="25" title="My Github" height="25">
     </a>
   </header>
   <main>
